# ctdlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: allocator.h  arena.h  ctd_allocator.h  ctd_arena.h  ctd_define.h  ctd_error.h  ctd_error_message.h  ctd_expandable_arena_allocator.h  ctd_generic_dynamic_array.h  ctd_generic_stack.h  ctd_internal_dynamic_array.h  ctd_macro_tools.h  ctd_option.h  ctd_page_allocator.h  ctd_string.h  error_message.h  generic_dynamic_array.h  generic_stack.h  internal_dyn_array.h  macro_tools.h  misc_utils.h  option.h
src/: allocator.c  arena.c  ctd_allocator.c  ctd_arena.c  ctd_arena_allocator.c  ctd_define.c  ctd_expandable_arena_allocator.c  ctd_page_allocator.c  ctd_string.c  main.c  misc_utils.c
tests/: main.c
tests/include/: test.h  test_ctd_allocator.h  test_ctd_arena.h  test_ctd_arena_allocator.h  test_ctd_expandable_arena_allocator.h  test_ctd_page_allocator.h  test_ctd_string.h
tests/src/: main.c  test.c  test_ctd_allocator.c  test_ctd_arena.c  test_ctd_arena_allocator.c  test_ctd_expandable_arena_allocator.c  test_ctd_page_allocator.c  test_ctd_string.c
